--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
     "eslint": "^7.14.0",
     "fs-extra": "^9.0.1",
     "node-sass": "^5.0.0",
-    "sass-loader": "^10.1.0"
+    "sass-loader": "^10.1.0",
+    "pug": "^3.0.2",
+    "pug-plain-loader": "^1.1.0"
   }
 }
