--- a/package.json
+++ b/package.json
@@ -22,17 +22,17 @@
     "popper.js": "^1.16.1",
     "sweetalert2": "^10.10.4",
     "vform": "^1.0.1",
-    "vue-i18n": "^8.22.2",
-    "vue-unicons": "^3.3.1"
+    "vue-i18n": "^8.22.2"
   },
   "devDependencies": {
     "@babel/eslint-parser": "^7.12.1",
+    "@nuxtjs/color-mode": "^3.1.3",
     "@nuxtjs/eslint-config": "^5.0.0",
     "eslint": "^7.14.0",
     "fs-extra": "^9.0.1",
     "node-sass": "^5.0.0",
-    "sass-loader": "^10.1.0",
     "pug": "^3.0.2",
-    "pug-plain-loader": "^1.1.0"
+    "pug-plain-loader": "^1.1.0",
+    "sass-loader": "^10.1.0"
   }
 }
